# nss

./: .env.example  .gitignore  AGENTS.md  README.md  TODO-CODEX.md  zensical.toml
analysis/protocol/: message_schema.json
analysis/re/: flow_graph.json  format_candidates.json  official_architecture_map.json  official_file_format_map.json  protocol_parity_matrix.json
analysis/state/: capability_registry.json  runtime_coverage_registry.json  stage_registry.json
analysis/ui/: soulseekqt_strings_full.txt
captures/fixtures/: README.md  peer_transfer_request.hex  peer_transfer_response.hex  server_file_search_request.hex  server_login_request.hex  verify-report.json
captures/golden/: README.md
captures/redacted/: README.md
docs/: index.md
docs/pr/: 0001-kb-runtime.md  0002-rust-parity.md  0003-s3a-auth-semantic-parity.md  0004-s3b-rooms-presence-roadmap.md  0005-s4a-recommendations-discovery.md  0006-s4b-peer-room-matrix.md  index.md  (+26 more)
rust/: Cargo.toml  README.md
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/cli/tests/: live_login_download_flim.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/protocol/: Cargo.toml
rust/protocol/src/: lib.rs
rust/tui/: Cargo.toml
rust/tui/src/: app.rs  main.rs  state.rs  storage.rs  ui.rs
rust/verify/: Cargo.toml
rust/verify/src/: lib.rs
scripts/: capture_golden.sh  capture_session.sh  derive_message_schema.sh  extract_search_download_flow.sh  ghidra_pipeline.sh  kb_promote.py  kb_sync_docs.py  kb_validate.py  package_release.sh  redact_capture_run.sh  run_diff_verify.sh  run_regression.sh  setup_credentials_wizard.sh  setup_toolchain.sh  setup_zensical.sh  sync_state_dashboards.sh  test_live_login_download_flim.sh
(+438 files in other folders)
