[workspace]
members = [
  "protocol",
  "core",
  "cli",
  "verify",
  "tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["NeoSoulSeek"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
hex = "0.4"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
tokio = { version = "1", features = ["macros", "net", "io-util", "rt-multi-thread", "time", "fs"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
protocol = { path = "protocol" }
soul-core = { path = "core" }
verify = { path = "verify" }
