[package]
name = "soul-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
crossterm.workspace = true
ratatui.workspace = true
soul-core.workspace = true
protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
directories = "5"
